# OxyFi

./: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FOREST_ML_README.md  IMPACT_PAGE_README.md  IMPROVEMENTS.md  README.md  TIMELAPSE_VIEWER_README.md  dfx.json  package-lock.json  package.json  tailwind.config.js  test-footer.html  tsconfig.json
.github/workflows/: frontend.yml
solana-program/: Anchor.toml  Cargo.toml
solana-program/scripts/: deploy.ts
solana-program/src/: lib.rs
src/ai_verification/: main.mo
src/carbon_credits/: main.mo
src/components/: AiAgentPopup.tsx  AppBar.tsx  ContentContainer.tsx  DarkModeToggle.tsx  Footer.tsx  ForestVisualizer.tsx  GoalBuilder.tsx  GreenChainNavbar.tsx  InvestModal.tsx  LoadingSkeleton.tsx  Navbar.tsx  Notification.tsx  ProjectCard.tsx  ProjectMap.tsx  ProjectModal.tsx  RequestAirdrop.tsx  SolanaWalletProvider.tsx  TimelapseViewer.tsx
src/components/Text/: index.tsx
src/components/nav-element/: index.tsx
src/greenchain_backend/: main.mo
src/hooks/: useImpactData.ts
src/models/: types.ts
src/pages/: _app.tsx  goal-builder.tsx  greenchain-demo.tsx  index.tsx  my-impact.tsx  timelapse-demo.tsx
src/pages/api/ai/: analyze-project.ts  anomaly-detection.ts  investment-recommendations.ts
src/pages/api/ml/: predict-health.ts
src/pages/api/satellite/: images.ts
src/services/: aiService.ts
src/social_features/: main.mo
src/stores/: useUserSOLBalanceStore.tsx  useUserStore.tsx
src/styles/: globals.css
src/utils/: co2OffsetContract.ts  index.tsx  ml.ts
src/views/home/: index.tsx  index.tsx.bak
