[package]
name = "greenchain-reforestation"
version = "0.1.0"
description = "GreenChain Reforestation Platform - AI-Powered On-Chain Carbon Credit and Investment Tracking"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "~3.5.0"
spl-associated-token-account = "~1.1.3"
borsh = "^0.10"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1", features = ["macros"] }