[package]
name = "greenchain-reforestation"
version = "0.1.0"
description = "GreenChain AI-Powered Reforestation Platform Smart Contract"
edition = "2021"
license = "MIT"
repository = "https://github.com/AbdurRazzak01/OxyFi"

[lib]
crate-type = ["cdylib", "lib"]
name = "greenchain_reforestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0"
spl-associated-token-account = "2.0"
solana-program = "1.17"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1", features = ["macros"] }